# QARoom

./: .dockerignore  .gitignore  .lighthouserc.json  .mcp.json  AGENTS.md  ARCHITECTURE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  START-HERE.md  Tiltfile  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.scripts.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.well-known/: llms.txt
chaos-experiments/: 01-pod-donations-unreachable.yaml  02-net-slow-nats.yaml  03-net-drop-content-consumers.yaml  04-stress-pg-pool-exhaustion.yaml  05-time-clock-skew.yaml  06-http-gateway-500-donations.yaml  07-net-partition-gateway-donations.yaml  README.md  (+1 more)
services/moderator-agent/: .env.example  AGENTS.md  Dockerfile  README.md  asyncapi.yaml  openapi.yaml  package.json  pyproject.toml
services/moderator-agent/.deepeval/: .deepeval_telemetry.txt
services/moderator-agent/contracts/: moderation-decision-recorded.schema.json  subjects.golden.json
services/moderator-agent/evals/: README.md  cost-model.json  llm-verdict.schema.json  model_compare.py  moderation.prompt.json  promptfooconfig.yaml
services/moderator-agent/evals/deepeval/: _support.py  conftest.py  test_agentic.py  test_geval_custom.py  test_judge_reliability.py  test_rag_metrics.py
services/moderator-agent/evals/golden/: candidates.jsonl  gold.json  labels.jsonl  promptfoo-tests.yaml
services/moderator-agent/evals/redteam/: _target.py  conftest.py  test_asi_2026.py  test_deepteam_owasp.py  test_pyrit_nightly.py
services/moderator-agent/rules/: comm_00000000000000000000000000.yaml
services/moderator-agent/scripts/: record_metamorphic_cassette.py  uv-or-skip.sh
services/moderator-agent/src/moderator_agent/: __init__.py  asyncapi_build.py  config.py  consumer.py  cost.py  cost_ledger.py  decision_observer.py  determinism.py  eval_cost_guard.py  eval_prompt_build.py  eval_support.py  guard.py  idempotency.py  ids.py  lamport.py  langchain_seam.py  langfuse_dataset_run.py  langfuse_integration.py  langfuse_seed.py  llm.py  llm_cassette.py  metamorphic.py  openapi_build.py  ports.py  problem.py  publisher.py  rerank.py  schemas.py  server.py  subjects.py  telemetry.py  tokenize.py  wiring.py
services/moderator-agent/src/moderator_agent/api/: __init__.py  app.py  operations.py
services/moderator-agent/src/moderator_agent/golden/: __init__.py  agreement.py  build.py  schema.py
services/moderator-agent/src/moderator_agent/persistence/: __init__.py  corpus.py  db.py  decisions.py  idempotency.py  knowledge.py  memory.py  migrate.py  rules_seed.py  vectors.py
services/moderator-agent/src/moderator_agent/verify/: __init__.py  selfcheck_contracts.py
services/moderator-agent/src/moderator_agent/workflow/: __init__.py  graph.py  model.py  prompts.py  selfcheck.py
services/moderator-agent/tests/: conftest.py  dst_driver.py  dst_harness.py  helpers.py  test_api.py  test_config_defaults.py  test_consumer.py  test_consumer_poison.py  test_corpus_guard.py  test_cost.py  test_cost_guard.py  test_drift.py  test_dst_fuzz.py  test_dst_livelock.py  test_dst_off_graph.py  test_dst_replay.py  test_eval_prompt_drift.py  test_golden_agreement.py  test_golden_drift.py  test_guard.py  test_ids.py  test_langfuse_integration.py  test_llm.py  test_llm_cassette.py  test_metamorphic.py  test_persistence_pg.py  test_precedent_contract.py  test_reranker.py  test_schemas_crosslang.py  test_selfcheck.py  test_subjects_crosslang.py  test_telemetry.py  test_tokenizer.py  test_workflow_conformance.py  test_workflow_decision.py  test_workflow_golden.py
services/moderator-agent/tests/cassettes/: metamorphic.json
(+1037 files in other folders)
